# openmp-qualifier

./: .gitignore  CMakeLists.txt  Makefile  README.md  bbp  bss  main.cpp  msp  mss  qsp  qss  reference  reference.cpp  sort.h
bubbleSort/: bsp.cpp  bss.cpp
common/: common.cpp  common.h
mergeSort/: msp.cpp  mss.cpp
quickSort/: qsp.cpp  qss.cpp
